# cmake-template

./: CMakeLists.txt
src/: CMakeLists.txt
